# SpiNNFrontEndCommon

./: .gitattributes  .gitignore  .pylint_dict.txt  .pylintrc  .ratexcludes  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE.md  LICENSE_POLICY.md  MANIFEST.in  README.md  import_hook.py  index.html  mypy.bash  mypyd.bash  pylint.bash  pypi_to_import  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.dbeaver/: credentials-config.json  data-sources.json  project-metadata.json
c/: aliases_8h.html  aliases_8h_source.html  annotated.html  bit__field__compressor_8c.html  bit__field__compressor_8c_source.html  bit__field__reader_8h.html  bit__field__reader_8h_source.html  bit__field__sorter__and__searcher_8c.html  bit__field__sorter__and__searcher_8c_source.html  bit__field__table__generator_8h.html  bit__field__table__generator_8h_source.html  bit__set_8h.html  bit__set_8h_source.html  buffered__eieio__defs_8h.html  buffered__eieio__defs_8h_source.html  chip__power__monitor_8c.html  chip__power__monitor_8c_source.html  classes.html  command__sender__multicast__source_8c.html  command__sender__multicast__source_8c_source.html  common-typedefs_8h.html  common-typedefs_8h_source.html  common_8h.html  common_8h_source.html  compressor_8h.html  compressor_8h_source.html  compressor__bit__field__models_2src_2common_2routing__table_8h.html  compressor__bit__field__models_2src_2common_2routing__table_8h_source.html  compressor__sorter__structs_8h.html  compressor__sorter__structs_8h_source.html  constants_8h.html  constants_8h_source.html  data__specification_8c.html  data__specification_8c_source.html  data__specification_8h.html  data__specification_8h_source.html  data__speed__up__packet__gatherer_8c.html  data__speed__up__packet__gatherer_8c_source.html  debug_8h.html  debug_8h_source.html  (+270 more)
c_common/: .gitignore  Doxyfile  Makefile  README.md  mainpage.dox
cpp_common/: Makefile
diagrams/: standard_layout_of_memory_by_DSE.dia
doc/: Makefile  doc_requirements.txt  unfiltered-files.txt
fec_integration_tests/: base_test_case.py  empty_test.py  mock_machine.py  mock_receiver.py  test_buffer_manager_listener_creation.py  test_java_caller.py
fec_local_tests/: test_java_caller.py
integration_tests/: empty_test.py  mock_machine.py  test_buffer_manager_listener_creation.py  test_memory_io.py
java_common/: .gitignore  build.xml
java_common_2/: .gitignore  build.xml
python/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spinn_front_end_common.data.html  (+27 more)
(+1496 files in other folders)
