# Copyright (c) 2023 The University of Manchester
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = SpiNNFrontEndCommon
version = attr: spinn_front_end_common._version.__version__
description = Common SpiNNaker Front end functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpiNNakerManchester/SpiNNFrontEndCommon
license = Apache-2.0
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
maintainer = SpiNNakerTeam
maintainer_email = spinnakerusers@googlegroups.com
keywords =
        spinnaker

[options]
python_requires = >=3.8, <4
packages = find:
zip_safe = True
include_package_data = True
install_requires =
        SpiNNMan == 1!7.3.1
        SpiNNaker_PACMAN == 1!7.3.1
        spalloc == 1!7.3.1
        scipy >= 0.16.0

[options.packages.find]
include =
        spinn_front_end_common
        spinn_front_end_common.*

[options.package_data]
* =
        spinnaker.cfg
        spinnaker.cfg.template
        *.aplx
        *.dict
        *.sql
        py.typed

[options.extras_require]
test =
        # pytest will be brought in by pytest-cov
        pytest-cov
        testfixtures
        httpretty != 1.0.0
        types-jsonschema
        types-requests
plotting =
        seaborn

[options.entry_points]
console_scripts =
        spinnaker_router_provenance_mapper = spinn_front_end_common.interface.provenance.router_prov_mapper:main [plotting]
